# benkyokai

./: .gitignore  README.md  create_toc.py
algorithms/fixed-point-number/: CMakeLists.txt  fixed-point-number.code-workspace
cg/: README.md
cg/three.js/: 00PMT_canvas.html  01PMTwebgl_geometries.html  02PMTallTEST.html  04PMTarrow.html  README.md
communication/: README.md
communication/python-multicast/: Dockerfile  README.md  receiver.py  transmitter.py
communication/python-servers/: README.md  msgpack_client.py  msgpack_server.py  requirements.txt  tcp_client.py  tcp_client_loop.py  tcp_server.py  tcp_server_loop.py  udp_client.py  udp_client_loop.py  udp_server.py  udp_server_loop.py  xmlrpc_client.py  xmlrpc_server.py
communication/socket_sample/: CMakeLists.txt  README.md  client.cpp  server.cpp
communication/tornado-chatbot/: README.md  chatdemo.py
communication/websocket-tornado/: README.md  client.py  requirements.txt  server.py
communication/websocket-tornado-chat/: README.md  chatdemo.py
competitive/AntBook/: 1-1.py  README.md  page037.py  page052.py  page053.py  page055.py
competitive/AtCoder/: README.md  atcoder.code-workspace  req.txt
competitive/lib/: lib.py
dockerfiles/gbm/: Dockerfile  (+1 more)
drawings/: README.md  nucleus.odg
fixed-point-number/: CMakeLists.txt  README.md
haskell/: README.md
image-processing/: affine_transform.ipynb
machine-learning/: README.md  jupyter.command  scikit_learn_practice.ipynb  simplenet.py  two_layer_net.py  zero_deep_learning.ipynb
statistics/: mean_and_median.ipynb
typescript/: README.md
(+299 files in other folders)
